Refactor examples to use "var"; fixes some broken examples (#248)