@@ -1,39 +1,46 @@
+import com.dropbox.sign.ApiException;
+import com.dropbox.sign.Configuration;
+import com.dropbox.sign.api.*;
+import com.dropbox.sign.auth.*;
+import com.dropbox.sign.model.*;
+
+import java.util.List;
+
 public class Example {
     public static void main(String[] args) {
-        ApiClient apiClient = Configuration.getDefaultApiClient();
+        var apiClient = Configuration.getDefaultApiClient();
 
         // Configure HTTP basic authorization: api_key
-        HttpBasicAuth apiKey = (HttpBasicAuth) apiClient
+        var apiKey = (HttpBasicAuth) apiClient
             .getAuthentication("api_key");
         apiKey.setUsername("YOUR_API_KEY");
 
         // or, configure Bearer (JWT) authorization: oauth2
         /*
-        HttpBearerAuth oauth2 = (HttpBearerAuth) apiClient
+        var oauth2 = (HttpBearerAuth) apiClient
             .getAuthentication("oauth2");
-
         oauth2.setBearerToken("YOUR_ACCESS_TOKEN");
         */
 
-        SignatureRequestApi signatureRequestApi = new SignatureRequestApi(apiClient);
+        var signatureRequestApi = new SignatureRequestApi(apiClient);
 
-        SubSignatureRequestTemplateSigner signer1 = new SubSignatureRequestTemplateSigner()
+        var signer1 = new SubSignatureRequestTemplateSigner()
             .role("Client")
             .name("George");
 
-        SubSigningOptions subSigningOptions = new SubSigningOptions()
+        var subSigningOptions = new SubSigningOptions()
             .draw(true)
             .type(true)
             .upload(true)
             .phone(false)
             .defaultType(SubSigningOptions.DefaultTypeEnum.DRAW);
 
-        SignatureRequestCreateEmbeddedWithTemplateRequest data = new SignatureRequestCreateEmbeddedWithTemplateRequest()
+        var data = new SignatureRequestCreateEmbeddedWithTemplateRequest()
             .clientId("ec64a202072370a737edf4a0eb7f4437")
-            .templateIds(Arrays.asList("c26b8a16784a872da37ea946b9ddec7c1e11dff6"))
+            .templateIds(List.of("c26b8a16784a872da37ea946b9ddec7c1e11dff6"))
             .subject("Purchase Order")
             .message("Glad we could come to an agreement.")
-            .signers(Arrays.asList(signer1))
+            .signers(List.of(signer1))
             .signingOptions(subSigningOptions)
             .testMode(true);
 
